--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -7,7 +7,8 @@
   },
   "dependencies": {
     "@deadnet/bebop": "workspace:*",
-    "bebop": "^3.1.3"
+    "bebop": "^3.1.3",
+    "websocket-ts": "^2.1.5"
   },
   "devDependencies": {
     "@types/bun": "^1.1.13"
